# PEP

./: PEP_Presentation.pptx  README.md
PEP-ML-Model/: load_duration_data_unique.csv  pep.ipynb  sample_output_after_analysis.json
PEP-ML-Model/app_code/: app.py  database.py  service.py
PEP-ML-Model/app_code/__MACOSX/: ._database.py
PEP-Python-Flask/: README.md  application.properties  convert_log_entries.py  pyproject.toml  setup.py
PEP-Python-Flask/src/: __about__.py  __init__.py  app.py  database.py  service.py  utils.py
PEP-Python-Flask/src/pep.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PEP_Web_Application/: package-lock.json  package.json
PEP_Web_Application/scripts/hooks/: before_serve.js
PEP_Web_Application/src/: index.html
PEP_Web_Application/src/css/: app.css  dashboard.css
PEP_Web_Application/src/js/: appController.js  common-functions.js
PEP_Web_Application/src/js/data/: quarterDataDemo.json
PEP_Web_Application/src/js/viewModels/: dashboard.js  quarterDataDemo.json
PEP_Web_Application/src/js/views/: dashboard.html
PEP_env/: pyvenv.cfg
PEP_env/Scripts/: activate  activate.bat
pep/: README.md  application.properties  pyproject.toml
pep/src/: __about__.py  __init__.py  app.py  constants.py
pep/src/templates/: home.html
