[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pep"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Purnachandra rao pulikonda", email = "abc@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Flask==3.0.3",
  "SQLAlchemy==2.0.35",
  "pyodbc==5.1.0",
]

[project.urls]
Documentation = "https://github.com/Purnachandra rao pulikonda/pep#readme"
Issues = "https://github.com/Purnachandra rao pulikonda/pep/issues"
Source = "https://github.com/Purnachandra rao pulikonda/pep"

[tool.hatch.version]
path = "src/pep/__about__.py"

[tool.hatch.envs.prod]
dev-mode = false

[tool.hatch.envs.dev]
dependencies = [
  "mypy"
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pep tests}"

[tool.coverage.run]
source_pkgs = ["pep", "tests"]
branch = true
parallel = true
omit = [
  "src/pep/__about__.py",
]

[tool.coverage.paths]
pep = ["src/pep", "*/pep/src/pep"]
tests = ["tests", "*/pep/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
